--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
             <li style="--i:2;"><a href="#">Calculator</a></li>
         </ul>
     </body>
-        <footer>
-            <div class="mitad"><a></a></div>
-        </footer>
+     <!---PIE DE PAGINA--->
+    <footer>
+        Copyright reserved &copy; 2022<br>
+        Design by iShyro <br>
+    </footer>
+    <!---PIE DE PAGINA--->
 </html>
