arreglo de bugs y estilo

--- a/index.html
+++ b/index.html
@@ -5,24 +5,31 @@
         <title>Portfolio - Shyro</title>
         <link rel="stylesheet" href="index.css">
         <link rel="design" href="design.css">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-        <script type="text/javascript" src="script.js"></script>
     </head>
+    <!---ENCABEZADO-->
         <section class="header">
             <h1>iShyro's</h1>
             <p>Private website about me</p>
-            <img src="pregunta.png" class="inline-block" width="80px">
-            <img src="code.png" class="inline-block" width="80px">
-            <img src="email.png" class="inline-block" width="80px">
+            <img src="pregunta.png" href="#" class="inline-block" width="80px">
+            <img src="email.png" href="#" class="inline-block" width="80px">
         </section>
+    <!---ENCABEZADO-->
     <body>
-        <ul class="menu">
-            <li style="--i:5;"><a href="#">Home</a></li>
-            <li style="--i:3;"><a href="#">Portfolio</a></li>
-            <li style="--i:2;"><a href="#">Calculator</a></li>
-        </ul>
+    <!---MENU PRINCIPAL-->
+        <section class="menu">
+            <ul>
+                <li style="--i:5;"><a href="index.html">Home</a></li>
+                <li style="--i:3;"><a href="#">Portfolio</a></li>
+                <li style="--i:2;"><a href="#">Calculator</a></li>
+            </ul>
+        </section>
+        <section>
+            <ul class="contenedor">
+            </ul>
+        </section>
+    <!---MENU PRINCIPAL-->
     </body>
-     <!---PIE DE PAGINA--->
+    <!---PIE DE PAGINA--->
     <footer>
         Copyright reserved &copy; 2022<br>
         Design by iShyro <br>
