--- a/portfolio.html
+++ b/portfolio.html
@@ -45,112 +45,112 @@
         </section>
         <section class="container">
             <div class="containerl">
-            <img style= "float: left" class="container-block" src="https://i.imgur.com/LDxhdoJ.png" alt="skywars-menu" width="310" height="220">
+            <img style= "float: left" class="container-block" src="https://i.imgur.com/LDxhdoJ.png" alt="scoreboard" width="310" height="220">
                 <div class="header-container">Scoreboards</div>
                 <div class="container-text">I can make your scoreboards and show important details of your server, I can include variables, utf-8 icons and scoreboards animated or with professional aesthetics for any type of server modality, both networks and normal.</div>
             </div>
         </section>
         <section class="container">
             <div class="containerl">
-            <img style= "float: left" class="container-block" src="https://lh6.googleusercontent.com/SiXQX3d9eAZxLtaeGDqLZ5pFUlER9zaxx7MnuY5krRCbO_wzHR3pRyDKnPnX76hTv1eaORsIj9ydLO579QIgnY3WuycytQtz7ZwljuXWogTSH5zXK2mBGB_CqbdRgo4dRw=w1280" alt="skywars-menu" width="400" height="230">
+            <img style= "float: left" class="container-block" src="https://imgur.com/32FwjLp.png" alt="areas" width="400" height="230">
                 <div class="header-container">Protect Areas</div>
                 <div class="container-text">Clearly, you have to have a good protection in your lobby or arena to avoid griefing or any other inconvenience with players.</div>
             </div>
         </section>
         <section class="container">
             <div class="containerl">
-            <img style= "float: left" class="container-block" src="https://i.imgur.com/DPvAjXD.gif" alt="skywars-menu" width="400" height="210">
+            <img style= "float: left" class="container-block" src="https://i.imgur.com/DPvAjXD.gif" alt="selector" width="400" height="210">
                 <div class="header-container">Menu Selector</div>
                 <div class="container-text">A menu to join a server, using bungeecord, with a custom text, custom heads with different models, blocks, colored panels to add aesthetics to the menu.</div>
             </div>
         </section>
         <section class="container">
             <div class="containerl">
-            <img style= "float: left" class="container-block" src="https://imgur.com/w0xUSRT.gif" alt="skywars-menu" width="400" height="210">
+            <img style= "float: left" class="container-block" src="https://imgur.com/w0xUSRT.gif" alt="npcs" width="400" height="210">
                 <div class="header-container">Command Npcs</div>
                 <div class="container-text">Open a menu, teleport somewhere, send a message, send you to a server, use an npc! and have a good look with a skin of a user or a mob.</div>
             </div>
         </section>
         <section class="container">
             <div class="containerl">
-            <img style= "float: left" class="container-block" src="https://i.imgur.com/dqDwYMW.gif" alt="skywars-menu" width="400" height="210">
+            <img style= "float: left" class="container-block" src="https://i.imgur.com/dqDwYMW.gif" alt="regions" width="400" height="210">
                 <div class="header-container">WorldGuard Regions</div>
                 <div class="container-text">Define a zone so that it can perform a specific action, fly in a specific area or not let you enter the area. All with the worldguard plugin</div>
             </div>
         </section>
         <section class="container">
             <div class="containerl">
-            <img style= "float: left" class="container-block" src="https://i.imgur.com/GsyPB5A.png" alt="skywars-menu" width="320" height="200">
+            <img style= "float: left" class="container-block" src="https://i.imgur.com/GsyPB5A.png" alt="anti-cheat" width="320" height="200">
                 <div class="header-container">Anti-Cheat System</div>
                 <div class="container-text">What could be more dangerous than a hacker on the server? Causing problems on the server, killing players or taking illegal advantages, I can add a good anti-hack to prevent bad things from happening</div>
             </div>
         </section>
         <section class="container">
             <div class="containerl">
-            <img style= "float: left" class="container-block" src="https://imgur.com/J7z3udo.png" alt="skywars-menu" width="320" height="200">
+            <img style= "float: left" class="container-block" src="https://imgur.com/J7z3udo.png" alt="mines" width="320" height="200">
                 <div class="header-container">Mines</div>
                 <div class="container-text">Perfect for a prison server, where you can chop all kinds of materials. I can edit it so you can pvp or not on it, edit the blocks and add custom functions.</div>
             </div>
         </section>
         <section class="container">
             <div class="containerl">
-            <img style= "float: left" class="container-block" src="https://imgur.com/L4b5TUM.png" alt="skywars-menu" width="370" height="200">
+            <img style= "float: left" class="container-block" src="https://imgur.com/L4b5TUM.png" alt="image-frames" width="370" height="200">
                 <div class="header-container">Images Frames</div>
                 <div class="container-text">Would you like to have a banner in the lobby of your server, with the details of some modality to give it an artistic and very nice touch? This is the solution, a minecraft image!</div>
             </div>
         </section>
         <section class="container">
             <div class="containerl">
-            <img style= "float: left" class="container-block" src="https://imgur.com/8AsTa2a.png" alt="skywars-menu" width="370" height="200">
+            <img style= "float: left" class="container-block" src="https://imgur.com/8AsTa2a.png" alt="hologramas" width="370" height="200">
                 <div class="header-container">Holograms</div>
                 <div class="container-text">Having a hologram for when you enter a server, and say some important message. Sure! I can do it without any problem! I can add variables to it, so it can tell you how many players there are, how much money you have, among others!</div>
             </div>
         </section>
         <section class="container">
             <div class="containerl">
-            <img style= "float: left" class="container-block" src="https://imgur.com/2FIL1bT.png" alt="skywars-menu" width="400" height="250">
+            <img style= "float: left" class="container-block" src="https://imgur.com/2FIL1bT.png" alt="tablist" width="400" height="250">
                 <div class="header-container">Tablist</div>
                 <div class="container-text">You want some special design in your tablist, what better than a good design to show that your server has aesthetics and is professional, we can place images in updated versions and original designs.</div>
             </div>
         </section>
         <section class="container">
             <div class="containerl">
-            <img style= "float: left" class="container-block" src="https://imgur.com/VUtwNgZ.png" alt="skywars-menu" width="360" height="230">
+            <img style= "float: left" class="container-block" src="https://imgur.com/VUtwNgZ.png" alt="portals" width="360" height="230">
                 <div class="header-container">Portals</div>
                 <div class="container-text">Would you like to have a portal that takes you anywhere you need to go? I can do it! I can put designs and effects, anything you can imagine!</div>
             </div>
         </section>
         <section class="container">
             <div class="containerl">
-            <img style= "float: left" class="container-block" src="https://imgur.com/EzWY5D4.png" alt="skywars-menu" width="330" height="230">
+            <img style= "float: left" class="container-block" src="https://imgur.com/EzWY5D4.png" alt="frames" width="330" height="230">
                 <div class="header-container">Interactive Frames</div>
                 <div class="container-text">How about a menu, or a map that tells you exactly where you are in the world. This is the solution! A frame where I can place a menu of any kind or whatever you want!</div>
             </div>
         </section>
         <section class="container">
             <div class="containerl">
-            <img style= "float: left" class="container-block" src="https://imgur.com/2hrqHAt.png" alt="skywars-menu" width="370" height="200">
+            <img style= "float: left" class="container-block" src="https://imgur.com/2hrqHAt.png" alt="blockparty" width="370" height="200">
                 <div class="header-container">Block Party</div>
                 <div class="container-text">A mode where you must survive the sudden changes of the ground, elimination of blocks with specific colors, but you must be fast. Because if you fall, you lose!</div>
             </div>
         </section>
         <section class="container">
             <div class="containerl">
-            <img style= "float: left" class="container-block" src="https://imgur.com/0X6byP4.png" alt="skywars-menu" width="370" height="200">
+            <img style= "float: left" class="container-block" src="https://imgur.com/0X6byP4.png" alt="titlemanager" width="370" height="200">
                 <div class="header-container">Title Manager</div>
                 <div class="container-text">A title for the entrance to a server, with the name or a welcome, simple but very necessary when making a modality.</div>
             </div>
         </section>
         <section class="container">
             <div class="containerl">
-            <img style= "float: left" class="container-block" src="https://imgur.com/YV5xn3W.png" alt="skywars-menu" width="380" height="200">
+            <img style= "float: left" class="container-block" src="https://imgur.com/YV5xn3W.png" alt="spigot" width="380" height="200">
                 <div class="header-container">Spigot or Spigot Forks (Paper)</div>
                 <div class="container-text">I can make a server of any modality using spigot or any fork of it, I can add them to the bungeecord and optimize any fork to have the best performance of your mini-game or modality.</div>
             </div>
         </section>
         <section class="container">
             <div class="containerl">
-            <img style= "float: left" class="container-block" src="https://imgur.com/blmUWfW.png" alt="skywars-menu" width="380" height="200">
+            <img style= "float: left" class="container-block" src="https://imgur.com/blmUWfW.png" alt="bungeecord" width="380" height="200">
                 <div class="header-container">Bungeecord (Network)</div>
                 <div class="container-text">I can make your bungeecord servers, with good anti-bots protection system, logging system and proxy protection, either a vps or a dedicated server of any website, always keeping the good design and aesthetics of the server in every way, good welcome messages, lobbies and prelobbys protection.</div>
             </div>
