--- a/comissions.html
+++ b/comissions.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" href="index.css">
         <link rel="design" href="design.css">
         <link rel="shortcut icon" href="favicon.png">
+        <script src="main.js"></script>
         <section class="header">
             <img class= "logo" src="logo.png" width="100em" height="100em">
             <h1>iShyro's</h1>
@@ -28,7 +29,6 @@
     </head>
     <!---ENCABEZADO-->
     <body>
-    <!---MENU PRINCIPAL-->
         <section class="menu">
             <ul>
                 <li style="--i:3;"><a href="index.html">Home</a></li>
@@ -36,4 +36,11 @@
                 <li class="color" style="--i:1;"><a href="comissions.html">Comissions</a></li>
             </ul>
         </section>
-    <!---MENU PRINCIPAL-->
+        <iframe class="form" src="https://docs.google.com/forms/d/e/1FAIpQLSckqxgI6YFaDEwpvjgx9Q62UOfrvvq8jM74VMls5xskcChHOw/viewform?embedded=true">Cargando…</iframe>
+    </body>
+        <!---PIE DE PAGINA--->
+    <footer>
+        Copyright reserved &copy; 2022<br>
+        Design by iShyro <br>
+    </footer>
+    <!---PIE DE PAGINA--->
