added kofi panel donation

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
             <img src="orbital.png" class="inline-block-logo" width="100em"><a class="downline-block">Orbital Studios</a><p class="downline-block-i">- Astrounaut -</p>
             </div>
         </section>
+        <iframe id='kofiframe' src='https://ko-fi.com/ishyro/?hidefeed=true&widget=true&embed=true&preview=true' style='border:none;width:100%;padding:4px;background:#f9f9f9;' height='712' title='ishyro'></iframe>
     <!---SOBRE MI-->
     </body>
     <!---PIE DE PAGINA--->
