--- a/comissions.html
+++ b/comissions.html
@@ -11,7 +11,8 @@
         <section class="header">
             <img class= "logo" src="logo.png" width="100em" height="100em">
             <h1>iShyro's</h1>
-            <p>Developer Frontend - Backend</p>
+            <p>Beginner Programmer</p>
+            <p>Minecraft Configurator</p>
             <img src="pregunta.png" href="#" class="inline-block" width="80px">
             <img src="email.png" href="#" class="inline-block" width="80px">
         </section>
