added arcane studios to my description

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <p class="sobremi">Hi, I'm iShyro and I'm a programmer, specialized for more than 4 years in the area of minecraft server creation, java plugin configuration, minecraft java optimization and bug fixing
                 currently learning and expanding my knowledge in the area of javascript, css, html, java.
                 <br>
-                Also an astronaut at Orbital Studios, a service team related to the minecraft area, among others. 
+                Also an astronaut at Orbital Studios, Arcane Studios a service team related to the minecraft area, among others. 
                 Currently I'm in the role of Server Setups.
             </p>
             <img src="orbital.png" class="inline-block-logo" width="100em"><a class="downline-block">Orbital Studios</a><p class="downline-block-i">- Astrounaut -</p>
